# controlnet-annotator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/controlnet_annotator/: __init__.py  util.py
src/controlnet_annotator/methods/hed/: __init__.py
src/controlnet_annotator/methods/mlsd/: __init__.py  mbv2_mlsd_large.py  util.py
